--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         </div>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+    <script src="index.js"></script>
     <script>
         AOS.init({
             once: false
