--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
-    <script src="index.js"></script>
+    <script src="REVISION.JS"></script>
     <script>
         AOS.init({
             once: false
